# methyltrain

./: LICENSE  README.md  config.yaml  pyproject.toml
docs/: devnotes.md
examples/: example.py
src/methyltrain/: constants.py
src/methyltrain/api/: prepare.py  steps.py
src/methyltrain/config/: defaults.py  loader.py
src/methyltrain/data/annotations/: illumina27k_annotation_hg19.parquet  illumina27k_annotation_hg39.parquet
src/methyltrain/fs/: layout.py
src/methyltrain/pipeline/: clean.py  preprocess.py  quality_control.py
src/methyltrain/utils/: utils.py
