[project]
name = "methyltrain"
version = "0.1.0"
description = "DNA methylation data engineering for machine learning"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name="Sophia Li", email="sophiamjia.li@mail.utoronto.ca" },
]
dependencies = [
]
[project.urls]
Homepage = "https://github.com/sophiamjiali/methyltrain"
Issues = "https://github.com/sophiamjiali/methyltrain/issues"